js/js.translator/testData/incremental/invalidation/companionInlineFunction/lib1/l1.0.kt
class MyClass1 {
    companion object {
        inline fun companionMethod() = 0
    }
}
